src/objects/Area__c.object
<CustomObject>
    <fields>
        <fullName>AreaNumber__c</fullName>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AssignedCaseManagers__c</fullName>
        <label>Assigned Case Manager(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <defaultValue>&apos;a&apos;</defaultValue>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Region_Area__c</fullName>
        <label>Region Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>San Diego</fullName>
                </value>
                <value>
                    <fullName>Orange County</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Inland Empire</fullName>
                </value>
                <value>
                    <fullName>Central Coast</fullName>
                </value>
                <value>
                    <fullName>Fresno-Bakersfield</fullName>
                </value>
                <value>
                    <fullName>Bay Area</fullName>
                </value>
                <value>
                    <fullName>New Mexico</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Redding-Chico</fullName>
                </value>
                <value>
                    <fullName>Sac-Modesto</fullName>
                </value>
                <value>
                    <fullName>Texas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>Bakersfield Area</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Fresno North &amp; South</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Imperial County</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Inland Empire-Central</fullName>
                </value>
                <value>
                    <fullName>Inland Empire-North</fullName>
                </value>
                <value>
                    <fullName>Inland Empire-South</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>LA Central</fullName>
                </value>
                <value>
                    <fullName>LA Southbay</fullName>
                </value>
                <value>
                    <fullName>LA Southeast</fullName>
                </value>
                <value>
                    <fullName>LA Valley</fullName>
                </value>
                <value>
                    <fullName>Long Beach/Pasadena</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regions__c</fullName>
        <label>Region(s)</label>
        <type>TextArea</type>
    </fields>
    <label>Area</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Region_Area__c</columns>
        <columns>NAME</columns>
        <columns>AreaNumber__c</columns>
        <columns>Region__c</columns>
        <columns>AssignedCaseManagers__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <group>CTAdmin</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>